<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Firebase Sessions Test App</string>
  <string name="action_settings">Settings</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="crash_test_widget_description">Test Widget for Crashing</string>
  <string name="widget_crash_button_text">Crash!</string>
  <string name="crash_button_text">Crash!</string>
  <string name="non_fatal_button_text">Non Fatal</string>
  <string name="button_anr_text">ANR</string>
  <string name="button_oom_text">OOM</string>
  <string name="button_mlk_text">Native Slow Leak</string>
  <string name="create_trace">Create New Trace: test_trace</string>
  <string name="create_trace_2">Create New Trace: test_trace_2</string>
  <string name="create_network_trace">Create network trace</string>
  <string name="start_foreground_service_text">Start Foreground Service</string>
  <string name="start_splitcreen_text">Start splitscreen - Different activity</string>
  <string name="start_splitcreen_same_text">Start splitscreen - Same activity</string>
  <string name="next_activity_text">Next activity</string>
  <string name="prev_activity_text">Previous activity</string>
  <string name="kill_processes_button_text">Kill Background Processes</string>
  <string name="no_session_text">No Session Set</string>
  <string name="session_id_label">Session Id: </string>
  <!-- Google-Services Plugin Resources-->
  <string name="firebase_database_url" translatable="false">https://project-12345.firebaseio.com</string>
  <string name="gcm_defaultSenderId" translatable="false">1234567</string>
  <string name="google_api_key" translatable="false">RaNdoMLett3r5aNdNuMb3rS</string>
  <string name="google_app_id" translatable="false">1:1234567:android:12345ffff54321</string>
  <string name="google_crash_reporting_api_key" translatable="false">RaNdoMLett3r5aNdNuMb3rS</string>
  <string name="google_storage_bucket" translatable="false">project-12345.firebasestorage.app</string>
  <string name="project_id" translatable="false">project-12345</string>
</resources>
